Added IMPLEMENTATION.md